--- a/paytogether/src/main/resources/application.yml
+++ b/paytogether/src/main/resources/application.yml
@@ -1,9 +1,14 @@
 spring:
   datasource:
-    url:
-      jdbc: jdbc:h2:tcp://localhost/~/paytogether
-    driver-class-name: org.h2.Driver
+    url: jdbc:h2:mem:pay_together
     username: sa
+    password:
+    driver-class-name: org.h2.Driver
+
+  h2:
+    console:
+      enabled: true
+      path: /h2-console
 
   jpa:
     show-sql: true
