build: redis 의존성
- redis에 저장하기 위해 spring-session-data-redis 추가
- spring-session을 위해 spring-session-data-reids 추가

Resolves: #3

--- a/paytogether/build.gradle
+++ b/paytogether/build.gradle
@@ -24,7 +24,11 @@ dependencies {
 
     implementation 'org.springframework.boot:spring-boot-starter-security'
 
+    implementation 'org.springframework.session:spring-session-data-redis'
+
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    //세션 저장소
+    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
     runtimeOnly 'com.h2database:h2'
 
     compileOnly 'org.projectlombok:lombok'
