chore: redis 설정
- redis 연결 설정
- redis session namespace 설정

Resolves: #3

--- a/paytogether/src/main/resources/application.yml
+++ b/paytogether/src/main/resources/application.yml
@@ -14,3 +14,13 @@ spring:
     show-sql: true
     hibernate:
       ddl-auto: create
+
+  data:
+    redis:
+      host: localhost
+      password:
+      port: 6379
+
+  session:
+    redis:
+      namespace: session-pay
