--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -4,25 +4,22 @@ spring:
       on-profile: local
 
   datasource:
-    url: jdbc:h2:mem:pay_together
-    username: sa
-    password:
-    driver-class-name: org.h2.Driver
-
-  h2:
-    console:
-      enabled: true
-      path: /h2-console
+    url: jdbc:mysql://localhost:3306/pay?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    username: root
+    password: root
 
   jpa:
     show-sql: true
     hibernate:
       ddl-auto: create
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MySQL8Dialect
 
   data:
     redis:
       host: localhost
-      password:
       port: 6379
 
   session:
